[gd_scene load_steps=2 format=3 uid="uid://3j2q50uqcr56"]

[ext_resource type="Script" path="res://Objects/General/ia_battle_debug.gd" id="1_v7j1k"]

[node name="IABattleDebug" type="CanvasLayer"]
visible = false
script = ExtResource("1_v7j1k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 967.0
offset_top = 79.0
offset_right = 1136.0
offset_bottom = 215.0

[node name="BtnAdvance" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Advance"

[node name="BtnSideLeftAttack" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Side left attack
"

[node name="BtnSideRightAttack" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Side Right attack
"

[node name="BtnCenterAttack" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Center attack
"

[node name="BtnStopUpdate" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Stop Update"

[node name="BtnStartUpdate" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start Update"

[connection signal="pressed" from="Control/VBoxContainer/BtnAdvance" to="." method="_on_btn_advance_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnSideLeftAttack" to="." method="_on_btn_side_left_attack_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnSideRightAttack" to="." method="_on_btn_side_right_attack_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnCenterAttack" to="." method="_on_btn_center_attack_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnStopUpdate" to="." method="_on_btn_stop_update_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BtnStartUpdate" to="." method="_on_btn_start_update_pressed"]
